# automation_linkedin

./: .gitignore  README.md  likes_and_comments.py  post_urls.csv  pyproject.toml
linkedin_utils/: driver_login.py  openai_integration.py
